--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "solid"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+serde = { version = "1.0", features = ["serde_derive"] }
+serde-xml-rs = "0.6.0"
+serde_json = "1.0.107"
+serde_yaml = "0.9.25"
